# hdr-analyze

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  GEMINI.md  LICENSE  MODAL_FFMPEG_INTEGRATION.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  clippy.txt  clippy_log.txt  codebase.md  deny.toml  dummy.hevc  mkvdolby  profile_run.sh  roadmap.md  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  skills-lock.json
.agent/tasks/: task.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: rust-reviewer.md
.clinerules/: cline.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  CLI_REFERENCE.md  CM_ANALYZE_PARITY.md  CONVERSION_QUALITY.md  DOLBY_VISION.md  GIT_WORKFLOW.md  MODAL_FFMPEG_INTEGRATION.md  PROVENANCE.md  RESEARCH.md  TECHNICAL_REFERENCE.md  VALIDATION.md  cmv40_upgrade_implementation_plan.md  dovi_tool.md  dovitool.README.md  fel_to_rpu_research_brief.md  hdr10_plus_tool.md  hdr10plus_tool_README.md  profile7_fel_developer_handoff.md  profile7_fel_to_profile81_preservation.md
docs/todo/: performance.md  roadmap.md
hdr_analyzer_mvp/: Cargo.toml  NATIVE_REFACTOR_SUMMARY.md  README.md
hdr_analyzer_mvp/src/: cli.rs  crop.rs  ffmpeg_io.rs  l1_sidecar.rs  main.rs  optimizer.rs  pipeline.rs  writer.rs
hdr_analyzer_mvp/src/analysis/: frame.rs  gpu.rs  histogram.rs  hlg.rs  kernels.cu  mod.rs  scene.rs
hdr_analyzer_mvp/tests/: cli.rs  real_content_consistency.rs  synthetic_accuracy.rs
mkvdolby/: .gitignore  Cargo.toml  README.md  pyproject.toml
mkvdolby/src/: cli.rs  external.rs  fel_composite.rs  main.rs  metadata.rs  pipeline.rs  progress.rs  resume.rs  rpu_check.rs  verify.rs
mkvdolby/src/mkvdolby/: cli.py  conversion.py  external.py  metadata.py  utils.py  verify.py
mkvdolby/tests/: integration.rs
mkvdovi/: Cargo.toml
mkvdovi/src/: cli.rs  external.rs  fel_composite.rs  main.rs  metadata.rs  pipeline.rs  progress.rs  rpu_check.rs
mkvdovi/tests/: integration.rs
rules/rust/: clone-on-copy.yml  collect-vec-iter.yml  dbg-macro.yml  expect-in-lib.yml  manual-ok-or.yml  println-in-lib.yml  string-push-str.yml  todo-fixme.yml  unwrap-in-lib.yml
scripts/: dev-refresh.sh  install.ps1  install.sh  mkvdolby_hifi_workflow.sh  mkvdovi_hifi_workflow.sh
src/: main.rs
tasks/: development-notes.md  improve-performance.md  native-hlg-support-plan.md  roadmap.md  scene-detection-v2-plan.md  task-order.md  tests.md  to-do.md
tools/: read_header.py
tools/compare_baseline/: Cargo.toml
tools/compare_baseline/src/: main.rs
tools/l1_diff/: Cargo.toml
tools/l1_diff/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
verifier/tests/: cli.rs
