[workspace]
resolver = "2"
members = [
    "hdr_analyzer_mvp",
    "mkvdolby",
    "verifier",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_qualifications = "warn"

[workspace.lints.clippy]
# Keep clippy baseline quiet under `-D warnings`; opt-in only to lints we want.
all = { level = "allow", priority = -2 }
correctness = { level = "deny", priority = 1 }
dbg_macro = "deny"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
