[package]
name = "hdr_analyzer_mvp"
version = "1.1.0"
edition = "2021"
authors = ["HDR-Analyze Contributors"]
description = "Dynamic HDR metadata generator for Dolby Vision conversion - Advanced HDR10 video analysis tool with PQ-based histograms and intelligent optimization"
license = "MIT"
repository = "https://github.com/your-username/hdr-analyze"
homepage = "https://github.com/your-username/hdr-analyze"
documentation = "https://github.com/your-username/hdr-analyze/blob/main/README.md"
readme = "../README.md"
keywords = ["hdr", "dolby-vision", "video", "analysis", "pq"]
categories = ["multimedia::video", "command-line-utilities"]
exclude = [
    "/.github/",
    "/target/",
    "*.bin",
    "*.mkv",
    "*.mp4"
]

[[bin]]
name = "hdr_analyzer_mvp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
madvr_parse = "1.0.2"
rayon = "1.11"
ffmpeg-next = "8.0"
