[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
description = "Verification tool for MadVR measurement files"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
# This is the key part: it depends on the published madvr_parse crate
madvr_parse = "1.0.2"
